@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,6 +25,7 @@
 
 package build.tools.symbolgenerator;
 
+import build.tools.symbolgenerator.CreateSymbols.ModuleHeaderDescription.ExportsDescription;
 import build.tools.symbolgenerator.CreateSymbols
                                   .ModuleHeaderDescription
                                   .ProvidesDescription;
@@ -34,9 +35,11 @@ import build.tools.symbolgenerator.CreateSymbols
 
 import java.io.BufferedInputStream;
 import java.io.BufferedReader;
+import java.io.BufferedOutputStream;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
+import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -55,6 +58,7 @@ import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -67,11 +71,15 @@ import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Set;
 import java.util.TimeZone;
+import java.util.TreeMap;
+import java.util.TreeSet;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipOutputStream;
 
 import javax.tools.JavaFileManager;
 import javax.tools.JavaFileManager.Location;
@@ -115,6 +123,9 @@ import com.sun.tools.classfile.Field;
 import com.sun.tools.classfile.InnerClasses_attribute;
 import com.sun.tools.classfile.InnerClasses_attribute.Info;
 import com.sun.tools.classfile.Method;
+import com.sun.tools.classfile.ModulePackages_attribute;
+import com.sun.tools.classfile.MethodParameters_attribute;
+import com.sun.tools.classfile.ModuleMainClass_attribute;
 import com.sun.tools.classfile.ModuleResolution_attribute;
 import com.sun.tools.classfile.ModuleTarget_attribute;
 import com.sun.tools.classfile.Module_attribute;
@@ -122,6 +133,11 @@ import com.sun.tools.classfile.Module_attribute.ExportsEntry;
 import com.sun.tools.classfile.Module_attribute.OpensEntry;
 import com.sun.tools.classfile.Module_attribute.ProvidesEntry;
 import com.sun.tools.classfile.Module_attribute.RequiresEntry;
+import com.sun.tools.classfile.NestHost_attribute;
+import com.sun.tools.classfile.NestMembers_attribute;
+import com.sun.tools.classfile.PermittedSubclasses_attribute;
+import com.sun.tools.classfile.Record_attribute;
+import com.sun.tools.classfile.Record_attribute.ComponentInfo;
 import com.sun.tools.classfile.RuntimeAnnotations_attribute;
 import com.sun.tools.classfile.RuntimeInvisibleAnnotations_attribute;
 import com.sun.tools.classfile.RuntimeInvisibleParameterAnnotations_attribute;
@@ -134,12 +150,26 @@ import com.sun.tools.javac.jvm.Target;
 import com.sun.tools.javac.util.Assert;
 import com.sun.tools.javac.util.Context;
 import com.sun.tools.javac.util.Pair;
+import java.util.Optional;
 
 /**
- * A tool for processing the .sym.txt files. It allows to:
+ * A tool for processing the .sym.txt files.
+ *
+ * To add historical data for JDK N, N >= 11, do the following:
+ *  * cd <open-jdk-checkout>/src/jdk.compiler/share/data/symbols
+ *  * <jdk-N>/bin/java --add-exports jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED \
+ *                     --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+ *                     --add-exports jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
+ *                     --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
+ *                     --add-modules jdk.jdeps \
+ *                     ../../../make/langtools/src/classes/build/tools/symbolgenerator/CreateSymbols.java \
+ *                     build-description-incremental symbols include.list
+ *  * sanity-check the new and updates files in src/jdk.compiler/share/data/symbols and commit them
+ *
+ * The tools allows to:
  *  * convert the .sym.txt into class/sig files for ct.sym
  *  * in cooperation with the adjacent history Probe, construct .sym.txt files for previous platforms
- *  * enhance existing .sym.txt files with a a new set .sym.txt for the current platform
+ *  * enhance existing .sym.txt files with a new set .sym.txt for the current platform
  *
  * To convert the .sym.txt files to class/sig files from ct.sym, run:
  *     java build.tool.symbolgenerator.CreateSymbols build-ctsym <platform-description-file> <target-directory>
@@ -182,14 +212,12 @@ import com.sun.tools.javac.util.Pair;
  * To generate the .sym.txt files for OpenJDK 7 and 8:
  *     <jdk-7>/bin/java build.tools.symbolgenerator.Probe OpenJDK7.classes
  *     <jdk-8>/bin/java build.tools.symbolgenerator.Probe OpenJDK8.classes
- *     java build.tools.symbolgenerator.CreateSymbols build-description make/data/symbols $TOPDIR make/data/symbols/include.list
+ *     java build.tools.symbolgenerator.CreateSymbols build-description src/jdk.compiler/share/data/symbols
+ *          $TOPDIR src/jdk.compiler/share/data/symbols/include.list
  *                                                    8 OpenJDK8.classes '<none>'
  *                                                    7 OpenJDK7.classes 8
  *
  * Note: the versions are expected to be a single character.
- *
- * To enhance existing historical data with data for JDK N, run:
- *     <jdk-N>/bin/java build.tools.symbolgenerator.CreateSymbols build-description-incremental make/data/symbols/symbols make/data/symbols/include.list
  *
  */
 public class CreateSymbols {
@@ -199,51 +227,172 @@ public class CreateSymbols {
      * {@code ctDescriptionFile}, using the file as a recipe to create the sigfiles.
      */
     @SuppressWarnings("unchecked")
-    public void createSymbols(String ctDescriptionFile, String ctSymLocation, CtSymKind ctSymKind) throws IOException {
-        LoadDescriptions data = load(Paths.get(ctDescriptionFile));
+    public void createSymbols(String ctDescriptionFileExtra, String ctDescriptionFile, String ctSymLocation,
+                              long timestamp, String currentVersion, String systemModules) throws IOException {
+        LoadDescriptions data = load(ctDescriptionFileExtra != null ? Paths.get(ctDescriptionFileExtra)
+                                                                    : null,
+                                     Paths.get(ctDescriptionFile));
 
+        stripNonExistentAnnotations(data);
         splitHeaders(data.classes);
+
+        Map<String, Map<Character, String>> package2Version2Module = new HashMap<>();
+        Map<String, Set<FileData>> directory2FileData = new TreeMap<>();
 
         for (ModuleDescription md : data.modules.values()) {
             for (ModuleHeaderDescription mhd : md.header) {
                 List<String> versionsList =
                         Collections.singletonList(mhd.versions);
-                writeModulesForVersions(ctSymLocation,
+                writeModulesForVersions(directory2FileData,
                                         md,
                                         mhd,
                                         versionsList);
+                List<String> packages = new ArrayList<>();
+                mhd.exports.stream()
+                           .map(ExportsDescription::packageName)
+                           .forEach(packages::add);
+                if (mhd.extraModulePackages != null) {
+                    packages.addAll(mhd.extraModulePackages);
+                }
+                packages.stream().forEach(pkg -> {
+                    for (char v : mhd.versions.toCharArray()) {
+                        package2Version2Module.computeIfAbsent(pkg, dummy -> new HashMap<>()).put(v, md.name);
+                    }
+                });
             }
         }
 
         for (ClassDescription classDescription : data.classes) {
+            Map<Character, String> version2Module = package2Version2Module.getOrDefault(classDescription.packge().replace('.', '/'), Collections.emptyMap());
             for (ClassHeaderDescription header : classDescription.header) {
-                switch (ctSymKind) {
-                    case JOINED_VERSIONS:
-                        Set<String> jointVersions = new HashSet<>();
-                        jointVersions.add(header.versions);
-                        limitJointVersion(jointVersions, classDescription.fields);
-                        limitJointVersion(jointVersions, classDescription.methods);
-                        writeClassesForVersions(ctSymLocation, classDescription, header, jointVersions);
-                        break;
-                    case SEPARATE:
-                        Set<String> versions = new HashSet<>();
-                        for (char v : header.versions.toCharArray()) {
-                            versions.add("" + v);
+                Set<String> jointVersions = new HashSet<>();
+                jointVersions.add(header.versions);
+                limitJointVersion(jointVersions, classDescription.fields);
+                limitJointVersion(jointVersions, classDescription.methods);
+                Map<String, StringBuilder> module2Versions = new HashMap<>();
+                for (char v : header.versions.toCharArray()) {
+                    String module = version2Module.get(v);
+                    if (module == null) {
+                        if (v >= '9') {
+                            throw new AssertionError("No module for " + classDescription.name +
+                                                     " and version " + v);
                         }
-                        writeClassesForVersions(ctSymLocation, classDescription, header, versions);
-                        break;
+                        module = version2Module.get('9');
+                        if (module == null) {
+                            module = "java.base";
+                        }
+                    }
+                    module2Versions.computeIfAbsent(module, dummy -> new StringBuilder()).append(v);
+                }
+                for (Entry<String, StringBuilder> e : module2Versions.entrySet()) {
+                    Set<String> currentVersions = new HashSet<>(jointVersions);
+                    limitJointVersion(currentVersions, e.getValue().toString());
+                    currentVersions = currentVersions.stream().filter(vers -> !disjoint(vers, e.getValue().toString())).collect(Collectors.toSet());
+                    writeClassesForVersions(directory2FileData, classDescription, header, e.getKey(), currentVersions);
+                }
+            }
+        }
+
+        currentVersion = Integer.toString(Integer.parseInt(currentVersion), Character.MAX_RADIX);
+        currentVersion = currentVersion.toUpperCase(Locale.ROOT);
+
+        openDirectory(directory2FileData, currentVersion + "/")
+                .add(new FileData(currentVersion + "/system-modules",
+                                  Files.readAllBytes(Paths.get(systemModules))));
+
+        try (OutputStream fos = new FileOutputStream(ctSymLocation);
+             OutputStream bos = new BufferedOutputStream(fos);
+             ZipOutputStream jos = new ZipOutputStream(bos)) {
+            for (Entry<String, Set<FileData>> e : directory2FileData.entrySet()) {
+                jos.putNextEntry(createZipEntry(e.getKey(), timestamp));
+                for (FileData fd : e.getValue()) {
+                    jos.putNextEntry(createZipEntry(fd.fileName, timestamp));
+                    jos.write(fd.fileData);
                 }
             }
         }
     }
 
+    private static final String PREVIEW_FEATURE_ANNOTATION_OLD =
+            "Ljdk/internal/PreviewFeature;";
+    private static final String PREVIEW_FEATURE_ANNOTATION_NEW =
+            "Ljdk/internal/javac/PreviewFeature;";
+    private static final String PREVIEW_FEATURE_ANNOTATION_INTERNAL =
+            "Ljdk/internal/PreviewFeature+Annotation;";
+    private static final String VALUE_BASED_ANNOTATION =
+            "Ljdk/internal/ValueBased;";
+    private static final String VALUE_BASED_ANNOTATION_INTERNAL =
+            "Ljdk/internal/ValueBased+Annotation;";
+    public static final Set<String> HARDCODED_ANNOTATIONS = new HashSet<>(
+            List.of("Ljdk/Profile+Annotation;",
+                    "Lsun/Proprietary+Annotation;",
+                    PREVIEW_FEATURE_ANNOTATION_OLD,
+                    PREVIEW_FEATURE_ANNOTATION_NEW,
+                    VALUE_BASED_ANNOTATION));
+
+    private void stripNonExistentAnnotations(LoadDescriptions data) {
+        Set<String> allClasses = data.classes.name2Class.keySet();
+        data.modules.values().forEach(mod -> {
+            stripNonExistentAnnotations(allClasses, mod.header);
+        });
+        data.classes.classes.forEach(clazz -> {
+            stripNonExistentAnnotations(allClasses, clazz.header);
+            stripNonExistentAnnotations(allClasses, clazz.fields);
+            stripNonExistentAnnotations(allClasses, clazz.methods);
+        });
+    }
+
+    private void stripNonExistentAnnotations(Set<String> allClasses, Iterable<? extends FeatureDescription> descs) {
+        descs.forEach(d -> stripNonExistentAnnotations(allClasses, d));
+    }
+
+    private void stripNonExistentAnnotations(Set<String> allClasses, FeatureDescription d) {
+        stripNonExistentAnnotations(allClasses, d.classAnnotations);
+        stripNonExistentAnnotations(allClasses, d.runtimeAnnotations);
+    }
+
+    private void stripNonExistentAnnotations(Set<String> allClasses, List<AnnotationDescription> annotations) {
+        if (annotations != null)
+            annotations.removeIf(ann -> !HARDCODED_ANNOTATIONS.contains(ann.annotationType) &&
+                                        !allClasses.contains(ann.annotationType.substring(1, ann.annotationType.length() - 1)));
+    }
+
+    private ZipEntry createZipEntry(String name, long timestamp) {
+        ZipEntry ze = new ZipEntry(name);
+
+        ze.setTime(timestamp);
+        return ze;
+    }
+
     public static String EXTENSION = ".sig";
 
-    LoadDescriptions load(Path ctDescription) throws IOException {
-        List<PlatformInput> platforms = new ArrayList<>();
+    LoadDescriptions load(Path ctDescriptionWithExtraContent, Path ctDescriptionOpen) throws IOException {
+        Map<String, PlatformInput> platforms = new LinkedHashMap<>();
+
+        if (ctDescriptionWithExtraContent != null && Files.isRegularFile(ctDescriptionWithExtraContent)) {
+            try (LineBasedReader reader = new LineBasedReader(ctDescriptionWithExtraContent)) {
+                while (reader.hasNext()) {
+                    switch (reader.lineKey) {
+                        case "generate":
+                            //ignore
+                            reader.moveNext();
+                            break;
+                        case "platform":
+                            PlatformInput platform = PlatformInput.load(ctDescriptionWithExtraContent,
+                                                                        reader);
+                            platforms.put(platform.version, platform);
+                            reader.moveNext();
+                            break;
+                        default:
+                            throw new IllegalStateException("Unknown key: " + reader.lineKey);
+                    }
+                }
+            }
+        }
+
         Set<String> generatePlatforms = null;
 
-        try (LineBasedReader reader = new LineBasedReader(ctDescription)) {
+        try (LineBasedReader reader = new LineBasedReader(ctDescriptionOpen)) {
             while (reader.hasNext()) {
                 switch (reader.lineKey) {
                     case "generate":
@@ -252,8 +401,9 @@ public class CreateSymbols {
                         reader.moveNext();
                         break;
                     case "platform":
-                        PlatformInput platform = PlatformInput.load(reader);
-                        platforms.add(platform);
+                        PlatformInput platform = PlatformInput.load(ctDescriptionOpen, reader);
+                        if (!platforms.containsKey(platform.version))
+                            platforms.put(platform.version, platform);
                         reader.moveNext();
                         break;
                     default:
@@ -265,7 +415,7 @@ public class CreateSymbols {
         Map<String, ClassDescription> classes = new LinkedHashMap<>();
         Map<String, ModuleDescription> modules = new LinkedHashMap<>();
 
-        for (PlatformInput platform: platforms) {
+        for (PlatformInput platform : platforms.values()) {
             for (ClassDescription cd : classes.values()) {
                 addNewVersion(cd.header, platform.basePlatform, platform.version);
                 addNewVersion(cd.fields, platform.basePlatform, platform.version);
@@ -275,7 +425,7 @@ public class CreateSymbols {
                 addNewVersion(md.header, platform.basePlatform, platform.version);
             }
             for (String input : platform.files) {
-                Path inputFile = ctDescription.getParent().resolve(input);
+                Path inputFile = platform.ctDescription.getParent().resolve(input);
                 try (LineBasedReader reader = new LineBasedReader(inputFile)) {
                     while (reader.hasNext()) {
                         String nameAttr = reader.attributes.get("name");
@@ -321,7 +471,7 @@ public class CreateSymbols {
         classes.values().forEach(result::add);
         return new LoadDescriptions(result,
                                     modules,
-                                    new ArrayList<>(platforms));
+                                    new ArrayList<>(platforms.values()));
     }
 
     private static void removeVersion(LoadDescriptions load, String deletePlatform) {
@@ -477,14 +627,17 @@ public class CreateSymbols {
         public final String version;
         public final String basePlatform;
         public final List<String> files;
-        public PlatformInput(String version, String basePlatform, List<String> files) {
+        public final Path ctDescription;
+        public PlatformInput(Path ctDescription, String version, String basePlatform, List<String> files) {
+            this.ctDescription = ctDescription;
             this.version = version;
             this.basePlatform = basePlatform;
             this.files = files;
         }
 
-        public static PlatformInput load(LineBasedReader in) throws IOException {
-            return new PlatformInput(in.attributes.get("version"),
+        public static PlatformInput load(Path ctDescription, LineBasedReader in) throws IOException {
+            return new PlatformInput(ctDescription,
+                                     in.attributes.get("version"),
                                      in.attributes.get("base"),
                                      List.of(in.attributes.get("files").split(":")));
         }
@@ -565,7 +718,7 @@ public class CreateSymbols {
                     newHeader.innerClasses = header.innerClasses;
                     newHeader.runtimeAnnotations = header.runtimeAnnotations;
                     newHeader.signature = header.signature;
-                    newHeader.versions = reduce(versions, header.versions);
+                    newHeader.versions = reduce(header.versions, versions);
 
                     newHeaders.add(newHeader);
                 }
@@ -577,26 +730,30 @@ public class CreateSymbols {
 
     void limitJointVersion(Set<String> jointVersions, List<? extends FeatureDescription> features) {
         for (FeatureDescription feature : features) {
-            for (String version : jointVersions) {
-                if (!containsAll(feature.versions, version) &&
-                    !disjoint(feature.versions, version)) {
-                    StringBuilder featurePart = new StringBuilder();
-                    StringBuilder otherPart = new StringBuilder();
-                    for (char v : version.toCharArray()) {
-                        if (feature.versions.indexOf(v) != (-1)) {
-                            featurePart.append(v);
-                        } else {
-                            otherPart.append(v);
-                        }
+            limitJointVersion(jointVersions, feature.versions);
+        }
+    }
+
+    void limitJointVersion(Set<String> jointVersions, String versions) {
+        for (String version : jointVersions) {
+            if (!containsAll(versions, version) &&
+                !disjoint(versions, version)) {
+                StringBuilder featurePart = new StringBuilder();
+                StringBuilder otherPart = new StringBuilder();
+                for (char v : version.toCharArray()) {
+                    if (versions.indexOf(v) != (-1)) {
+                        featurePart.append(v);
+                    } else {
+                        otherPart.append(v);
                     }
-                    jointVersions.remove(version);
-                    if (featurePart.length() == 0 || otherPart.length() == 0) {
-                        throw new AssertionError();
-                    }
-                    jointVersions.add(featurePart.toString());
-                    jointVersions.add(otherPart.toString());
-                    break;
                 }
+                jointVersions.remove(version);
+                if (featurePart.length() == 0 || otherPart.length() == 0) {
+                    throw new AssertionError();
+                }
+                jointVersions.add(featurePart.toString());
+                jointVersions.add(otherPart.toString());
+                break;
             }
         }
     }
@@ -617,33 +774,29 @@ public class CreateSymbols {
         return true;
     }
 
-    void writeClassesForVersions(String ctSymLocation,
+    void writeClassesForVersions(Map<String, Set<FileData>> directory2FileData,
                                  ClassDescription classDescription,
                                  ClassHeaderDescription header,
+                                 String module,
                                  Iterable<String> versions)
             throws IOException {
         for (String ver : versions) {
-            writeClass(ctSymLocation, classDescription, header, ver);
+            writeClass(directory2FileData, classDescription, header, module, ver);
         }
     }
 
-    void writeModulesForVersions(String ctSymLocation,
+    void writeModulesForVersions(Map<String, Set<FileData>> directory2FileData,
                                  ModuleDescription moduleDescription,
                                  ModuleHeaderDescription header,
                                  Iterable<String> versions)
             throws IOException {
         for (String ver : versions) {
-            writeModule(ctSymLocation, moduleDescription, header, ver);
+            writeModule(directory2FileData, moduleDescription, header, ver);
         }
     }
 
-    public enum CtSymKind {
-        JOINED_VERSIONS,
-        SEPARATE;
-    }
-
     //<editor-fold defaultstate="collapsed" desc="Class Writing">
-    void writeModule(String ctSymLocation,
+    void writeModule(Map<String, Set<FileData>> directory2FileData,
                     ModuleDescription moduleDescription,
                     ModuleHeaderDescription header,
                     String version) throws IOException {
@@ -670,23 +823,13 @@ public class CreateSymbols {
                 new Method[0],
                 attributes);
 
-        Path outputClassFile = Paths.get(ctSymLocation,
-                                         version + "-modules",
-                                         moduleDescription.name,
-                                         "module-info" + EXTENSION);
-
-        Files.createDirectories(outputClassFile.getParent());
-
-        try (OutputStream out = Files.newOutputStream(outputClassFile)) {
-            ClassWriter w = new ClassWriter();
-
-            w.write(classFile, out);
-        }
+        doWrite(directory2FileData, version, moduleDescription.name, "module-info" + EXTENSION, classFile);
     }
 
-    void writeClass(String ctSymLocation,
+    void writeClass(Map<String, Set<FileData>> directory2FileData,
                     ClassDescription classDescription,
                     ClassHeaderDescription header,
+                    String module,
                     String version) throws IOException {
         List<CPInfo> constantPool = new ArrayList<>();
         constantPool.add(null);
@@ -739,15 +882,43 @@ public class CreateSymbols {
                 methods.toArray(new Method[0]),
                 attributes);
 
-        Path outputClassFile = Paths.get(ctSymLocation, version, classDescription.name + EXTENSION);
+        doWrite(directory2FileData, version, module, classDescription.name + EXTENSION, classFile);
+    }
 
-        Files.createDirectories(outputClassFile.getParent());
-
-        try (OutputStream out = Files.newOutputStream(outputClassFile)) {
+    private void doWrite(Map<String, Set<FileData>> directory2FileData,
+                         String version,
+                         String moduleName,
+                         String fileName,
+                         ClassFile classFile) throws IOException {
+        int lastSlash = fileName.lastIndexOf('/');
+        String pack = lastSlash != (-1) ? fileName.substring(0, lastSlash + 1) : "/";
+        String directory = version + "/" + moduleName + "/" + pack;
+        String fullFileName = version + "/" + moduleName + "/" + fileName;
+        try (ByteArrayOutputStream out = new ByteArrayOutputStream()) {
             ClassWriter w = new ClassWriter();
 
             w.write(classFile, out);
+
+            openDirectory(directory2FileData, directory)
+                .add(new FileData(fullFileName, out.toByteArray()));
         }
+    }
+
+    private Set<FileData> openDirectory(Map<String, Set<FileData>> directory2FileData,
+                               String directory) {
+        Comparator<FileData> fileCompare = (fd1, fd2) -> fd1.fileName.compareTo(fd2.fileName);
+        return directory2FileData.computeIfAbsent(directory, d -> new TreeSet<>(fileCompare));
+    }
+
+    private static class FileData {
+        public final String fileName;
+        public final byte[] fileData;
+
+        public FileData(String fileName, byte[] fileData) {
+            this.fileName = fileName;
+            this.fileData = fileData;
+        }
+
     }
 
     private void addAttributes(ModuleDescription md,
@@ -767,6 +938,12 @@ public class CreateSymbols {
             int targetIdx = addString(cp, header.moduleTarget);
             attributes.put(Attribute.ModuleTarget,
                            new ModuleTarget_attribute(attrIdx, targetIdx));
+        }
+        if (header.moduleMainClass != null) {
+            int attrIdx = addString(cp, Attribute.ModuleMainClass);
+            int targetIdx = addString(cp, header.moduleMainClass);
+            attributes.put(Attribute.ModuleMainClass,
+                           new ModuleMainClass_attribute(attrIdx, targetIdx));
         }
         int attrIdx = addString(cp, Attribute.Module);
         attributes.put(Attribute.Module,
@@ -807,13 +984,21 @@ public class CreateSymbols {
         return new RequiresEntry(idx,
                                  r.flags,
                                  r.version != null
-                                         ? addInt(cp, r.version)
+                                         ? addString(cp, r.version)
                                          : 0);
     }
 
     private static ExportsEntry createExportsEntry(List<CPInfo> cp,
-                                                   String e) {
-        return new ExportsEntry(addPackageName(cp, e), 0, new int[0]);
+                                                   ExportsDescription export) {
+        int[] to;
+        if (export.isQualified()) {
+            to = export.to.stream()
+                          .mapToInt(module -> addModuleName(cp, module))
+                          .toArray();
+        } else {
+            to = new int[0];
+        }
+        return new ExportsEntry(addPackageName(cp, export.packageName()), 0, to);
     }
 
     private static OpensEntry createOpensEntry(List<CPInfo> cp, String e) {
@@ -832,6 +1017,48 @@ public class CreateSymbols {
     private void addAttributes(ClassHeaderDescription header,
             List<CPInfo> constantPool, Map<String, Attribute> attributes) {
         addGenericAttributes(header, constantPool, attributes);
+        if (header.nestHost != null) {
+            int attributeString = addString(constantPool, Attribute.NestHost);
+            int nestHost = addClass(constantPool, header.nestHost);
+            attributes.put(Attribute.NestHost,
+                           new NestHost_attribute(attributeString, nestHost));
+        }
+        if (header.nestMembers != null && !header.nestMembers.isEmpty()) {
+            int attributeString = addString(constantPool, Attribute.NestMembers);
+            int[] nestMembers = new int[header.nestMembers.size()];
+            int i = 0;
+            for (String intf : header.nestMembers) {
+                nestMembers[i++] = addClass(constantPool, intf);
+            }
+            attributes.put(Attribute.NestMembers,
+                           new NestMembers_attribute(attributeString, nestMembers));
+        }
+        if (header.isRecord) {
+            assert header.recordComponents != null;
+            int attributeString = addString(constantPool, Attribute.Record);
+            ComponentInfo[] recordComponents = new ComponentInfo[header.recordComponents.size()];
+            int i = 0;
+            for (RecordComponentDescription rcd : header.recordComponents) {
+                int name = addString(constantPool, rcd.name);
+                Descriptor desc = new Descriptor(addString(constantPool, rcd.descriptor));
+                Map<String, Attribute> nestedAttrs = new HashMap<>();
+                addGenericAttributes(rcd, constantPool, nestedAttrs);
+                Attributes attrs = new Attributes(nestedAttrs);
+                recordComponents[i++] = new ComponentInfo(name, desc, attrs);
+            }
+            attributes.put(Attribute.Record,
+                           new Record_attribute(attributeString, recordComponents));
+        }
+        if (header.isSealed) {
+            int attributeString = addString(constantPool, Attribute.PermittedSubclasses);
+            int[] subclasses = new int[header.permittedSubclasses.size()];
+            int i = 0;
+            for (String intf : header.permittedSubclasses) {
+                subclasses[i++] = addClass(constantPool, intf);
+            }
+            attributes.put(Attribute.PermittedSubclasses,
+                    new PermittedSubclasses_attribute(attributeString, subclasses));
+        }
         addInnerClassesAttribute(header, constantPool, attributes);
     }
 
@@ -889,6 +1116,18 @@ public class CreateSymbols {
             attributes.put(Attribute.RuntimeVisibleParameterAnnotations,
                            new RuntimeVisibleParameterAnnotations_attribute(attributeString,
                                    annotations));
+        }
+        if (desc.methodParameters != null && !desc.methodParameters.isEmpty()) {
+            int attributeString =
+                    addString(constantPool, Attribute.MethodParameters);
+            MethodParameters_attribute.Entry[] entries =
+                    desc.methodParameters
+                        .stream()
+                        .map(p -> new MethodParameters_attribute.Entry(addString(constantPool, p.name),
+                                                                        p.flags))
+                        .toArray(s -> new MethodParameters_attribute.Entry[s]);
+            attributes.put(Attribute.MethodParameters,
+                           new MethodParameters_attribute(attributeString, entries));
         }
     }
 
@@ -953,9 +1192,33 @@ public class CreateSymbols {
     }
 
     private Annotation createAnnotation(List<CPInfo> constantPool, AnnotationDescription desc) {
+        String annotationType = desc.annotationType;
+        Map<String, Object> values = desc.values;
+
+        if (PREVIEW_FEATURE_ANNOTATION_NEW.equals(annotationType)) {
+            //the non-public PreviewFeature annotation will not be available in ct.sym,
+            //replace with purely synthetic javac-internal annotation:
+            annotationType = PREVIEW_FEATURE_ANNOTATION_INTERNAL;
+        }
+
+        if (PREVIEW_FEATURE_ANNOTATION_OLD.equals(annotationType)) {
+            //the non-public PreviewFeature annotation will not be available in ct.sym,
+            //replace with purely synthetic javac-internal annotation:
+            annotationType = PREVIEW_FEATURE_ANNOTATION_INTERNAL;
+            values = new HashMap<>(values);
+            Boolean essentialAPI = (Boolean) values.remove("essentialAPI");
+            values.put("reflective", essentialAPI != null && !essentialAPI);
+        }
+
+        if (VALUE_BASED_ANNOTATION.equals(annotationType)) {
+            //the non-public ValueBased annotation will not be available in ct.sym,
+            //replace with purely synthetic javac-internal annotation:
+            annotationType = VALUE_BASED_ANNOTATION_INTERNAL;
+        }
+
         return new Annotation(null,
-                              addString(constantPool, desc.annotationType),
-                              createElementPairs(constantPool, desc.values));
+                              addString(constantPool, annotationType),
+                              createElementPairs(constantPool, values));
     }
 
     private element_value_pair[] createElementPairs(List<CPInfo> constantPool, Map<String, Object> annotationAttributes) {
@@ -1151,7 +1414,8 @@ public class CreateSymbols {
 
         List<PlatformInput> platforms =
                 versions.stream()
-                        .map(desc -> new PlatformInput(desc.version,
+                        .map(desc -> new PlatformInput(null,
+                                                       desc.version,
                                                        desc.primaryBaseline,
                                                        null))
                         .collect(Collectors.toList());
@@ -1159,7 +1423,7 @@ public class CreateSymbols {
         dumpDescriptions(classes, modules, platforms, Set.of(), descDest.resolve("symbols"), args);
     }
     //where:
-        private static final String DO_NO_MODIFY =
+        public static String DO_NOT_MODIFY =
             "#\n" +
             "# Copyright (c) {YEAR}, Oracle and/or its affiliates. All rights reserved.\n" +
             "# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.\n" +
@@ -1231,14 +1495,19 @@ public class CreateSymbols {
         ExcludeIncludeList currentEIList = excludesIncludes;
 
         if (!currentVersionModules.isEmpty()) {
+            Set<String> privateIncludes =
+                    enhancedIncludesListBasedOnClassHeaders(classes, classData);
             Set<String> includes = new HashSet<>();
 
             for (ModuleDescription md : currentVersionModules.values()) {
-                md.header.get(0).exports.stream().map(e -> e + '/')
+                md.header.get(0).exports.stream()
+                                        .filter(e -> !e.isQualified())
+                                        .map(e -> e.packageName + '/')
                                         .forEach(includes::add);
             }
 
             currentEIList = new ExcludeIncludeList(includes,
+                                                   privateIncludes,
                                                    Collections.emptySet());
         }
 
@@ -1261,7 +1530,9 @@ public class CreateSymbols {
                 if (unsupported.header
                                .get(0)
                                .exports
-                               .contains(cd.packge().replace('.', '/'))) {
+                               .stream()
+                               .map(ed -> ed.packageName)
+                               .anyMatch(pack -> pack.equals(cd.packge().replace('.', '/')))) {
                     ClassHeaderDescription ch = cd.header.get(0);
                     if (ch.classAnnotations == null) {
                         ch.classAnnotations = new ArrayList<>();
@@ -1283,7 +1554,7 @@ public class CreateSymbols {
             for (ClassDescription clazz : currentVersionClasses) {
                 ClassHeaderDescription header = clazz.header.get(0);
 
-                if (includeEffectiveAccess(currentVersionClasses, clazz)) {
+                if (includeEffectiveAccess(currentVersionClasses, clazz) && currentEIList.accepts(clazz.name, false)) {
                     modified |= include(includedClasses, currentVersionClasses, clazz.name);
                 }
 
@@ -1309,12 +1580,24 @@ public class CreateSymbols {
             }
         } while (modified);
 
+        Set<String> allIncludedPackages = new HashSet<>();
+
         for (ClassDescription clazz : currentVersionClasses) {
             if (!includedClasses.contains(clazz.name)) {
                 continue;
             }
 
             ClassHeaderDescription header = clazz.header.get(0);
+
+            if (header.nestMembers != null) {
+                Iterator<String> nestMemberIt = header.nestMembers.iterator();
+
+                while(nestMemberIt.hasNext()) {
+                    String member = nestMemberIt.next();
+                    if (!includedClasses.contains(member))
+                        nestMemberIt.remove();
+                }
+            }
 
             if (header.innerClasses != null) {
                 Iterator<InnerClassInfo> innerClassIt = header.innerClasses.iterator();
@@ -1339,6 +1622,8 @@ public class CreateSymbols {
             } else {
                 classes.add(clazz);
             }
+
+            allIncludedPackages.add(clazz.packge().replace('.', '/'));
         }
 
         for (ModuleDescription module : currentVersionModules.values()) {
@@ -1353,6 +1638,13 @@ public class CreateSymbols {
                     if (!includedClasses.contains(ici.innerClass))
                         innerClassIt.remove();
                 }
+            }
+
+            header.exports.removeIf(ed -> ed.isQualified() &&
+                                          !allIncludedPackages.contains(ed.packageName()));
+
+            if (header.extraModulePackages != null) {
+                header.extraModulePackages.retainAll(allIncludedPackages);
             }
 
             ModuleDescription existing = modules.get(module.name);
@@ -1378,14 +1670,28 @@ public class CreateSymbols {
 
         Map<String, String> package2Modules = new HashMap<>();
 
-        for (ModuleDescription md : modules.values()) {
-            md.header
-              .stream()
-              .filter(h -> h.versions.contains("9"))
-              .flatMap(h -> h.exports.stream())
-              .map(p -> p.replace('/', '.'))
-              .forEach(p -> package2Modules.put(p, md.name));
-        }
+        versions.stream()
+                .filter(v -> "9".compareTo(v.version) <= 0)
+                .sorted((v1, v2) -> v1.version.compareTo(v2.version))
+                .forEach(v -> {
+            for (ModuleDescription md : modules.values()) {
+                md.header
+                  .stream()
+                  .filter(h -> h.versions.contains(v.version))
+                  .flatMap(h -> {
+                      List<String> packages = new ArrayList<>();
+                      h.exports.stream()
+                               .map(ExportsDescription::packageName)
+                               .forEach(packages::add);
+                      if (h.extraModulePackages != null) {
+                          packages.addAll(h.extraModulePackages);
+                      }
+                      return packages.stream();
+                  })
+                  .map(p -> p.replace('/', '.'))
+                  .forEach(p -> package2Modules.putIfAbsent(p, md.name));
+            }
+        });
 
         package2Modules.put("java.awt.dnd.peer", "java.desktop");
         package2Modules.put("java.awt.peer", "java.desktop");
@@ -1439,7 +1745,9 @@ public class CreateSymbols {
                         StringWriter data = new StringWriter();
                         ModuleDescription module = modules.get(e.getKey());
 
-                        module.write(data, desc.basePlatform, desc.version);
+                        if (module != null) { //module == null should only be in tests.
+                            module.write(data, desc.basePlatform, desc.version);
+                        }
 
                         for (ClassDescription clazz : e.getValue()) {
                             clazz.write(data, desc.basePlatform, desc.version);
@@ -1454,12 +1762,12 @@ public class CreateSymbols {
                             String existingYear = null;
                             boolean hasChange = true;
                             if (Files.isReadable(f)) {
-                                String oldContent = new String(Files.readAllBytes(f), StandardCharsets.UTF_8);
-                                int yearPos = DO_NO_MODIFY.indexOf("{YEAR}");
+                                String oldContent = Files.readString(f, StandardCharsets.UTF_8);
+                                int yearPos = DO_NOT_MODIFY.indexOf("{YEAR}");
                                 String headerPattern =
-                                        Pattern.quote(DO_NO_MODIFY.substring(0, yearPos)) +
+                                        Pattern.quote(DO_NOT_MODIFY.substring(0, yearPos)) +
                                         "([0-9]+)(, [0-9]+)?" +
-                                        Pattern.quote(DO_NO_MODIFY.substring(yearPos + "{YEAR}".length()));
+                                        Pattern.quote(DO_NOT_MODIFY.substring(yearPos + "{YEAR}".length()));
                                 String pattern = headerPattern +
                                                  Pattern.quote(dataString);
                                 Matcher m = Pattern.compile(pattern, Pattern.MULTILINE).matcher(oldContent);
@@ -1476,7 +1784,7 @@ public class CreateSymbols {
                                 try (Writer out = Files.newBufferedWriter(f, StandardCharsets.UTF_8)) {
                                     String currentYear = String.valueOf(year);
                                     String yearSpec = (existingYear != null && !currentYear.equals(existingYear) ? existingYear + ", " : "") + currentYear;
-                                    out.append(DO_NO_MODIFY.replace("{YEAR}", yearSpec));
+                                    out.append(DO_NOT_MODIFY.replace("{YEAR}", yearSpec));
                                     out.write(dataString);
                                 }
                             }
@@ -1487,7 +1795,7 @@ public class CreateSymbols {
 
                 outputFiles.put(desc, files);
             }
-            symbolsOut.append(DO_NO_MODIFY.replace("{YEAR}", "2015, " + year));
+            symbolsOut.append(DO_NOT_MODIFY.replace("{YEAR}", "2015, " + year));
             symbolsOut.append("#command used to generate this file:\n");
             symbolsOut.append("#")
                       .append(CreateSymbols.class.getName())
@@ -1530,7 +1838,7 @@ public class CreateSymbols {
                 Integer.toString(Integer.parseInt(platformVersion), Character.MAX_RADIX);
         String version = currentVersion.toUpperCase(Locale.ROOT);
         Path ctDescriptionPath = Paths.get(ctDescriptionFile).toAbsolutePath();
-        LoadDescriptions data = load(ctDescriptionPath);
+        LoadDescriptions data = load(null, ctDescriptionPath);
 
         ClassList classes = data.classes;
         Map<String, ModuleDescription> modules = data.modules;
@@ -1538,6 +1846,7 @@ public class CreateSymbols {
 
         ExcludeIncludeList excludeList =
                 ExcludeIncludeList.create(excludeFile);
+
         loadVersionClasses(classes, modules, classBytes, excludeList, "$", version);
 
         removeVersion(data, version);
@@ -1561,7 +1870,7 @@ public class CreateSymbols {
         }
 
         if (versions.stream().noneMatch(inp -> version.equals(inp.version))) {
-            versions.add(new PlatformInput(version, baseline.apply(data), null));
+            versions.add(new PlatformInput(null, version, baseline.apply(data), null));
         }
 
         Set<String> writeVersions = new HashSet<>();
@@ -1659,7 +1968,7 @@ public class CreateSymbols {
             return ;
         }
 
-        if (!excludesIncludes.accepts(cf.getName())) {
+        if (!excludesIncludes.accepts(cf.getName(), true)) {
             return ;
         }
 
@@ -1755,6 +2064,45 @@ public class CreateSymbols {
         addModuleHeader(moduleDesc, headerDesc, version);
     }
 
+    private Set<String> enhancedIncludesListBasedOnClassHeaders(ClassList classes,
+                                                                Iterable<byte[]> classData) {
+        Set<String> additionalIncludes = new HashSet<>();
+
+        for (byte[] classFileData : classData) {
+            try (InputStream in = new ByteArrayInputStream(classFileData)) {
+                ClassFile cf = ClassFile.read(in);
+
+                if (cf.access_flags.is(AccessFlags.ACC_MODULE)) {
+                    continue;
+                }
+
+                Set<String> additionalClasses = new HashSet<>();
+
+                if (cf.super_class != 0) {
+                    additionalClasses.add(cf.getSuperclassName());
+                }
+                for (int i = 0; i < cf.interfaces.length; i++) {
+                    additionalClasses.add(cf.getInterfaceName(i));
+                }
+
+                for (String additional : additionalClasses) {
+                    int dollar;
+
+                    additionalIncludes.add(additional);
+
+                    while ((dollar = additional.lastIndexOf('$')) != (-1)) {
+                        additional = additional.substring(0, dollar);
+                        additionalIncludes.add(additional);
+                    }
+                }
+            } catch (IOException | ConstantPoolException ex) {
+                throw new IllegalStateException(ex);
+            }
+        }
+
+        return additionalIncludes;
+    }
+
     private void addModuleHeader(ModuleDescription moduleDesc,
                                  ModuleHeaderDescription headerDesc,
                                  String version) {
@@ -1785,9 +2133,13 @@ public class CreateSymbols {
             if (existing.equals(headerDesc) && (!existed || (baseline != null && existing.versions.contains(baseline)))) {
                 headerDesc = existing;
                 existed = true;
-            } else {
-                //check if the only difference between the 7 and 8 version is the Profile annotation
-                //if so, copy it to the pre-8 version, so save space
+            }
+        }
+
+        if (!existed) {
+            //check if the only difference between the 7 and 8 version is the Profile annotation
+            //if so, copy it to the pre-8 version, so save space
+            for (ClassHeaderDescription existing : clazzDesc.header) {
                 List<AnnotationDescription> annots = existing.classAnnotations;
 
                 if (annots != null) {
@@ -1936,9 +2288,11 @@ public class CreateSymbols {
 
                 header.exports =
                         Arrays.stream(mod.exports)
-                              .filter(ee -> ee.exports_to_count == 0)
-                              .map(ee -> getPackageName(cf, ee.exports_index))
+                              .map(ee -> ExportsDescription.create(cf, ee))
                               .collect(Collectors.toList());
+                if (header.extraModulePackages != null) {
+                    header.exports.forEach(ed -> header.extraModulePackages.remove(ed.packageName()));
+                }
                 header.requires =
                         Arrays.stream(mod.requires)
                               .map(r -> RequiresDescription.create(cf, r))
@@ -1974,8 +2328,87 @@ public class CreateSymbols {
                 break;
             }
             case Attribute.ModulePackages:
+                assert feature instanceof ModuleHeaderDescription;
+                ModuleHeaderDescription header =
+                        (ModuleHeaderDescription) feature;
+                ModulePackages_attribute mod =
+                        (ModulePackages_attribute) attr;
+                header.extraModulePackages = new ArrayList<>();
+                for (int i = 0; i < mod.packages_count; i++) {
+                    String packageName = getPackageName(cf, mod.packages_index[i]);
+                    if (header.exports == null ||
+                        header.exports.stream().noneMatch(ed -> ed.packageName().equals(packageName))) {
+                        header.extraModulePackages.add(packageName);
+                    }
+                }
+                break;
             case Attribute.ModuleHashes:
                 break;
+            case Attribute.NestHost: {
+                assert feature instanceof ClassHeaderDescription;
+                NestHost_attribute nestHost = (NestHost_attribute) attr;
+                ClassHeaderDescription chd = (ClassHeaderDescription) feature;
+                chd.nestHost = nestHost.getNestTop(cf.constant_pool).getName();
+                break;
+            }
+            case Attribute.NestMembers: {
+                assert feature instanceof ClassHeaderDescription;
+                NestMembers_attribute nestMembers = (NestMembers_attribute) attr;
+                ClassHeaderDescription chd = (ClassHeaderDescription) feature;
+                chd.nestMembers = Arrays.stream(nestMembers.members_indexes)
+                                        .mapToObj(i -> getClassName(cf, i))
+                                        .collect(Collectors.toList());
+                break;
+            }
+            case Attribute.Record: {
+                assert feature instanceof ClassHeaderDescription;
+                Record_attribute record = (Record_attribute) attr;
+                List<RecordComponentDescription> components = new ArrayList<>();
+                for (ComponentInfo info : record.component_info_arr) {
+                    RecordComponentDescription rcd = new RecordComponentDescription();
+                    rcd.name = info.getName(cf.constant_pool);
+                    rcd.descriptor = info.descriptor.getValue(cf.constant_pool);
+                    for (Attribute nestedAttr : info.attributes) {
+                        readAttribute(cf, rcd, nestedAttr);
+                    }
+                    components.add(rcd);
+                }
+                ClassHeaderDescription chd = (ClassHeaderDescription) feature;
+                chd.isRecord = true;
+                chd.recordComponents = components;
+                break;
+            }
+            case Attribute.MethodParameters: {
+                assert feature instanceof MethodDescription;
+                MethodParameters_attribute params = (MethodParameters_attribute) attr;
+                MethodDescription method = (MethodDescription) feature;
+                method.methodParameters = new ArrayList<>();
+                for (MethodParameters_attribute.Entry e : params.method_parameter_table) {
+                    String name = e.name_index == 0 ? null
+                            : cf.constant_pool.getUTF8Value(e.name_index);
+                    MethodDescription.MethodParam param =
+                            new MethodDescription.MethodParam(e.flags, name);
+                    method.methodParameters.add(param);
+                }
+                break;
+            }
+            case Attribute.PermittedSubclasses: {
+                assert feature instanceof ClassHeaderDescription;
+                PermittedSubclasses_attribute permittedSubclasses = (PermittedSubclasses_attribute) attr;
+                ClassHeaderDescription chd = (ClassHeaderDescription) feature;
+                chd.permittedSubclasses = Arrays.stream(permittedSubclasses.subtypes)
+                        .mapToObj(i -> getClassName(cf, i))
+                        .collect(Collectors.toList());
+                chd.isSealed = true;
+                break;
+            }
+            case Attribute.ModuleMainClass: {
+                ModuleMainClass_attribute moduleMainClass = (ModuleMainClass_attribute) attr;
+                assert feature instanceof ModuleHeaderDescription;
+                ModuleHeaderDescription mhd = (ModuleHeaderDescription) feature;
+                mhd.moduleMainClass = moduleMainClass.getMainClassName(cf.constant_pool);
+                break;
+            }
             default:
                 throw new IllegalStateException("Unhandled attribute: " +
                                                 attrName);
@@ -2020,11 +2453,16 @@ public class CreateSymbols {
         }
     }
 
-    private static Integer getVersion(ClassFile cf, int idx) {
+    public static String INJECTED_VERSION = null;
+
+    private static String getVersion(ClassFile cf, int idx) {
+        if (INJECTED_VERSION != null) {
+            return INJECTED_VERSION;
+        }
         if (idx == 0)
             return null;
         try {
-            return ((CONSTANT_Integer_info) cf.constant_pool.get(idx)).value;
+            return ((CONSTANT_Utf8_info) cf.constant_pool.get(idx)).value;
         } catch (InvalidIndex ex) {
             throw new IllegalStateException(ex);
         }
@@ -2138,9 +2576,15 @@ public class CreateSymbols {
         if (clazzName == null)
             return false;
 
+        ClassDescription desc = classes.find(clazzName, true);
+
+        if (desc == null) {
+            return false;
+        }
+
         boolean modified = includedClasses.add(clazzName);
 
-        for (ClassDescription outer : classes.enclosingClasses(classes.find(clazzName, true))) {
+        for (ClassDescription outer : classes.enclosingClasses(desc)) {
             modified |= includedClasses.add(outer.name);
         }
 
@@ -2182,10 +2626,17 @@ public class CreateSymbols {
 
     public static class ExcludeIncludeList {
         public final Set<String> includeList;
+        public final Set<String> privateIncludeList;
         public final Set<String> excludeList;
 
         protected ExcludeIncludeList(Set<String> includeList, Set<String> excludeList) {
+            this(includeList, Set.of(), excludeList);
+        }
+
+        protected ExcludeIncludeList(Set<String> includeList, Set<String> privateIncludeList,
+                                     Set<String> excludeList) {
             this.includeList = includeList;
+            this.privateIncludeList = privateIncludeList;
             this.excludeList = excludeList;
         }
 
@@ -2205,8 +2656,10 @@ public class CreateSymbols {
             return new ExcludeIncludeList(includeList, excludeList);
         }
 
-        public boolean accepts(String className) {
-            return matches(includeList, className) && !matches(excludeList, className);
+        public boolean accepts(String className, boolean includePrivateClasses) {
+            return (matches(includeList, className) ||
+                    (includePrivateClasses && matches(privateIncludeList, className))) &&
+                   !matches(excludeList, className);
         }
 
         private static boolean matches(Set<String> list, String className) {
@@ -2406,13 +2859,15 @@ public class CreateSymbols {
 
     static class ModuleHeaderDescription extends HeaderDescription {
         String name;
-        List<String> exports = new ArrayList<>();
+        List<ExportsDescription> exports = new ArrayList<>();
         List<String> opens = new ArrayList<>();
+        List<String> extraModulePackages = new ArrayList<>();
         List<RequiresDescription> requires = new ArrayList<>();
         List<String> uses = new ArrayList<>();
         List<ProvidesDescription> provides = new ArrayList<>();
         Integer moduleResolution;
         String moduleTarget;
+        String moduleMainClass;
 
         @Override
         public int hashCode() {
@@ -2420,11 +2875,13 @@ public class CreateSymbols {
             hash = 83 * hash + Objects.hashCode(this.name);
             hash = 83 * hash + Objects.hashCode(this.exports);
             hash = 83 * hash + Objects.hashCode(this.opens);
+            hash = 83 * hash + Objects.hashCode(this.extraModulePackages);
             hash = 83 * hash + Objects.hashCode(this.requires);
             hash = 83 * hash + Objects.hashCode(this.uses);
             hash = 83 * hash + Objects.hashCode(this.provides);
             hash = 83 * hash + Objects.hashCode(this.moduleResolution);
             hash = 83 * hash + Objects.hashCode(this.moduleTarget);
+            hash = 83 * hash + Objects.hashCode(this.moduleMainClass);
             return hash;
         }
 
@@ -2447,6 +2904,9 @@ public class CreateSymbols {
             if (!listEquals(this.opens, other.opens)) {
                 return false;
             }
+            if (!listEquals(this.extraModulePackages, other.extraModulePackages)) {
+                return false;
+            }
             if (!listEquals(this.requires, other.requires)) {
                 return false;
             }
@@ -2463,6 +2923,10 @@ public class CreateSymbols {
                                 other.moduleResolution)) {
                 return false;
             }
+            if (!Objects.equals(this.moduleMainClass,
+                                other.moduleMainClass)) {
+                return false;
+            }
             return true;
         }
 
@@ -2474,10 +2938,17 @@ public class CreateSymbols {
                  && versions.contains(version)))
                 return ;
             output.append("header");
-            if (exports != null && !exports.isEmpty())
-                output.append(" exports " + serializeList(exports));
+            if (exports != null && !exports.isEmpty()) {
+                List<String> exportsList =
+                        exports.stream()
+                               .map(exp -> exp.serialize())
+                               .collect(Collectors.toList());
+                output.append(" exports " + serializeList(exportsList));
+            }
             if (opens != null && !opens.isEmpty())
                 output.append(" opens " + serializeList(opens));
+            if (extraModulePackages != null && !extraModulePackages.isEmpty())
+                output.append(" extraModulePackages " + serializeList(extraModulePackages));
             if (requires != null && !requires.isEmpty()) {
                 List<String> requiresList =
                         requires.stream()
@@ -2500,6 +2971,8 @@ public class CreateSymbols {
                 output.append(" resolution " +
                               quote(Integer.toHexString(moduleResolution),
                                     true));
+            if (moduleMainClass != null)
+                output.append(" moduleMainClass " + quote(moduleMainClass, true));
             writeAttributes(output);
             output.append("\n");
             writeInnerClasses(output, baselineVersion, version);
@@ -2522,8 +2995,12 @@ public class CreateSymbols {
             if (!"header".equals(reader.lineKey))
                 return false;
 
-            exports = deserializeList(reader.attributes.get("exports"));
+            List<String> exportsList = deserializeList(reader.attributes.get("exports"), false);
+            exports = exportsList.stream()
+                                 .map(ExportsDescription::deserialize)
+                                 .collect(Collectors.toList());
             opens = deserializeList(reader.attributes.get("opens"));
+            extraModulePackages = deserializeList(reader.attributes.get("extraModulePackages"));
             List<String> requiresList =
                     deserializeList(reader.attributes.get("requires"));
             requires = requiresList.stream()
@@ -2544,6 +3021,8 @@ public class CreateSymbols {
                 moduleResolution = Integer.parseInt(resolutionFlags, 16);
             }
 
+            moduleMainClass = reader.attributes.get("moduleMainClass");
+
             readAttributes(reader);
             reader.moveNext();
             readInnerClasses(reader);
@@ -2551,13 +3030,53 @@ public class CreateSymbols {
             return true;
         }
 
+        record ExportsDescription(String packageName, List<String> to) {
+            public String serialize() {
+                return packageName +
+                       (isQualified() ? "[" + quote(serializeList(to), true, true) + "]"
+                                      : "");
+            }
+
+            public static ExportsDescription deserialize(String data) {
+                int bracket = data.indexOf("[");
+                String packageName;
+                List<String> to;
+                if (bracket != (-1)) {
+                    packageName = data.substring(0, bracket);
+                    to = deserializeList(unquote(data.substring(bracket + 1, data.length() - 1)));
+                } else {
+                    packageName = data;
+                    to = null;
+                }
+
+                return new ExportsDescription(packageName, to);
+            }
+
+            public static ExportsDescription create(ClassFile cf,
+                                                    ExportsEntry ee) {
+                String packageName = getPackageName(cf, ee.exports_index);
+                List<String> to = null;
+                if (ee.exports_to_count > 0) {
+                    to = new ArrayList<>();
+                    for (int moduleIndex : ee.exports_to_index) {
+                        to.add(getModuleName(cf, moduleIndex));
+                    }
+                }
+                return new ExportsDescription(packageName, to);
+            }
+
+            public boolean isQualified() {
+                return to != null && !to.isEmpty();
+            }
+        }
+
         static class RequiresDescription {
             final String moduleName;
             final int flags;
-            final Integer version;
+            final String version;
 
             public RequiresDescription(String moduleName, int flags,
-                                       Integer version) {
+                                       String version) {
                 this.moduleName = moduleName;
                 this.flags = flags;
                 this.version = version;
@@ -2565,7 +3084,7 @@ public class CreateSymbols {
 
             public String serialize() {
                 String versionKeyValue = version != null
-                        ? " version " + quote(String.valueOf(version), true)
+                        ? " version " + quote(version, true)
                         : "";
                 return "name " + quote(moduleName, true) +
                        " flags " + quote(Integer.toHexString(flags), true) +
@@ -2575,8 +3094,8 @@ public class CreateSymbols {
             public static RequiresDescription deserialize(String data) {
                 Map<String, String> attributes = splitAttributes(data);
 
-                Integer ver = attributes.containsKey("version")
-                        ? Integer.parseInt(attributes.get("version"))
+                String ver = attributes.containsKey("version")
+                        ? attributes.get("version")
                         : null;
                 int flags = Integer.parseInt(attributes.get("flags"), 16);
                 return new RequiresDescription(attributes.get("name"),
@@ -2587,11 +3106,45 @@ public class CreateSymbols {
             public static RequiresDescription create(ClassFile cf,
                                                      RequiresEntry req) {
                 String mod = getModuleName(cf, req.requires_index);
-                Integer ver = getVersion(cf, req.requires_version_index);
+                String ver = getVersion(cf, req.requires_version_index);
                 return new RequiresDescription(mod,
                                                req.requires_flags,
                                                ver);
             }
+
+            @Override
+            public int hashCode() {
+                int hash = 7;
+                hash = 53 * hash + Objects.hashCode(this.moduleName);
+                hash = 53 * hash + this.flags;
+                hash = 53 * hash + Objects.hashCode(this.version);
+                return hash;
+            }
+
+            @Override
+            public boolean equals(Object obj) {
+                if (this == obj) {
+                    return true;
+                }
+                if (obj == null) {
+                    return false;
+                }
+                if (getClass() != obj.getClass()) {
+                    return false;
+                }
+                final RequiresDescription other = (RequiresDescription) obj;
+                if (this.flags != other.flags) {
+                    return false;
+                }
+                if (!Objects.equals(this.moduleName, other.moduleName)) {
+                    return false;
+                }
+                if (!Objects.equals(this.version, other.version)) {
+                    return false;
+                }
+                return true;
+            }
+
         }
 
         static class ProvidesDescription {
@@ -2626,6 +3179,35 @@ public class CreateSymbols {
                               .mapToObj(wi -> getClassName(cf, wi))
                               .collect(Collectors.toList());
                 return new ProvidesDescription(api, impls);
+            }
+
+            @Override
+            public int hashCode() {
+                int hash = 5;
+                hash = 53 * hash + Objects.hashCode(this.interfaceName);
+                hash = 53 * hash + Objects.hashCode(this.implNames);
+                return hash;
+            }
+
+            @Override
+            public boolean equals(Object obj) {
+                if (this == obj) {
+                    return true;
+                }
+                if (obj == null) {
+                    return false;
+                }
+                if (getClass() != obj.getClass()) {
+                    return false;
+                }
+                final ProvidesDescription other = (ProvidesDescription) obj;
+                if (!Objects.equals(this.interfaceName, other.interfaceName)) {
+                    return false;
+                }
+                if (!Objects.equals(this.implNames, other.implNames)) {
+                    return false;
+                }
+                return true;
             }
         }
     }
@@ -2666,10 +3248,24 @@ public class CreateSymbols {
                 header.write(output, baselineVersion, version);
             }
             for (FieldDescription field : fields) {
-                field.write(output, baselineVersion, version);
+                if (!field.versions.contains(version)) {
+                    field.write(output, baselineVersion, version);
+                }
             }
             for (MethodDescription method : methods) {
-                method.write(output, baselineVersion, version);
+                if (!method.versions.contains(version)) {
+                    method.write(output, baselineVersion, version);
+                }
+            }
+            for (FieldDescription field : fields) {
+                if (field.versions.contains(version)) {
+                    field.write(output, baselineVersion, version);
+                }
+            }
+            for (MethodDescription method : methods) {
+                if (method.versions.contains(version)) {
+                    method.write(output, baselineVersion, version);
+                }
             }
             output.append("\n");
         }
@@ -2752,17 +3348,35 @@ public class CreateSymbols {
 
             return pack;
         }
+
+        @Override
+        public String toString() {
+            return name;
+        }
+
     }
 
     static class ClassHeaderDescription extends HeaderDescription {
         String extendsAttr;
         List<String> implementsAttr;
+        String nestHost;
+        List<String> nestMembers;
+        boolean isRecord;
+        List<RecordComponentDescription> recordComponents;
+        boolean isSealed;
+        List<String> permittedSubclasses;
 
         @Override
         public int hashCode() {
             int hash = super.hashCode();
             hash = 17 * hash + Objects.hashCode(this.extendsAttr);
             hash = 17 * hash + Objects.hashCode(this.implementsAttr);
+            hash = 17 * hash + Objects.hashCode(this.nestHost);
+            hash = 17 * hash + Objects.hashCode(this.nestMembers);
+            hash = 17 * hash + Objects.hashCode(this.isRecord);
+            hash = 17 * hash + Objects.hashCode(this.recordComponents);
+            hash = 17 * hash + Objects.hashCode(this.isSealed);
+            hash = 17 * hash + Objects.hashCode(this.permittedSubclasses);
             return hash;
         }
 
@@ -2781,6 +3395,24 @@ public class CreateSymbols {
             if (!Objects.equals(this.implementsAttr, other.implementsAttr)) {
                 return false;
             }
+            if (!Objects.equals(this.nestHost, other.nestHost)) {
+                return false;
+            }
+            if (!listEquals(this.nestMembers, other.nestMembers)) {
+                return false;
+            }
+            if (this.isRecord != other.isRecord) {
+                return false;
+            }
+            if (!listEquals(this.recordComponents, other.recordComponents)) {
+                return false;
+            }
+            if (this.isSealed != other.isSealed) {
+                return false;
+            }
+            if (!listEquals(this.permittedSubclasses, other.permittedSubclasses)) {
+                return false;
+            }
             return true;
         }
 
@@ -2794,8 +3426,19 @@ public class CreateSymbols {
                 output.append(" extends " + extendsAttr);
             if (implementsAttr != null && !implementsAttr.isEmpty())
                 output.append(" implements " + serializeList(implementsAttr));
+            if (nestHost != null)
+                output.append(" nestHost " + nestHost);
+            if (nestMembers != null && !nestMembers.isEmpty())
+                output.append(" nestMembers " + serializeList(nestMembers));
+            if (isRecord) {
+                output.append(" record true");
+            }
+            if (isSealed) {
+                output.append(" sealed true");
+            }
             writeAttributes(output);
             output.append("\n");
+            writeRecordComponents(output, baselineVersion, version);
             writeInnerClasses(output, baselineVersion, version);
         }
 
@@ -2808,13 +3451,45 @@ public class CreateSymbols {
             String elementsList = reader.attributes.get("implements");
             implementsAttr = deserializeList(elementsList);
 
+            nestHost = reader.attributes.get("nestHost");
+            String nestMembersList = reader.attributes.get("nestMembers");
+            nestMembers = deserializeList(nestMembersList);
+            isRecord = reader.attributes.containsKey("record");
+
             readAttributes(reader);
             reader.moveNext();
+            if (isRecord) {
+                readRecordComponents(reader);
+            }
             readInnerClasses(reader);
 
+            isSealed = reader.attributes.containsKey("permittedSubclasses");
+            if (isSealed) {
+                String subclassesList = reader.attributes.get("permittedSubclasses");
+                permittedSubclasses = deserializeList(subclassesList);
+            }
             return true;
         }
 
+        protected void writeRecordComponents(Appendable output,
+                                              String baselineVersion,
+                                              String version) throws IOException {
+            if (recordComponents != null) {
+                for (RecordComponentDescription rcd : recordComponents) {
+                    rcd.write(output, "", "");
+                }
+            }
+        }
+
+        protected void readRecordComponents(LineBasedReader reader) throws IOException {
+            recordComponents = new ArrayList<>();
+
+            while ("recordcomponent".equals(reader.lineKey)) {
+                RecordComponentDescription rcd = new RecordComponentDescription();
+                rcd.read(reader);
+                recordComponents.add(rcd);
+            }
+        }
     }
 
     static abstract class HeaderDescription extends FeatureDescription {
@@ -2887,6 +3562,7 @@ public class CreateSymbols {
         Object annotationDefaultValue;
         List<List<AnnotationDescription>> classParameterAnnotations;
         List<List<AnnotationDescription>> runtimeParameterAnnotations;
+        List<MethodParam> methodParameters;
 
         public MethodDescription() {
             flagsNormalization = METHODS_FLAGS_NORMALIZATION;
@@ -2963,6 +3639,15 @@ public class CreateSymbols {
                     output.append(";");
                 }
             }
+            if (methodParameters != null && !methodParameters.isEmpty()) {
+                Function<MethodParam, String> param2String =
+                        p -> Integer.toHexString(p.flags) + ":" + p.name;
+                List<String> paramsAsStrings =
+                        methodParameters.stream()
+                                         .map(param2String)
+                                         .collect(Collectors.toList());
+                output.append(" methodParameters " + serializeList(paramsAsStrings));
+            }
             output.append("\n");
         }
 
@@ -3010,17 +3695,41 @@ public class CreateSymbols {
                 runtimeParameterAnnotations = annos;
             }
 
+            String inMethodParameters = reader.attributes.get("methodParameters");
+            if (inMethodParameters != null) {
+                Function<String, MethodParam> string2Param =
+                        p -> {
+                            int sep = p.indexOf(':');
+                            return new MethodParam(Integer.parseInt(p.substring(0, sep)),
+                                                    p.substring(sep + 1));
+                        };
+                methodParameters =
+                        deserializeList(inMethodParameters).stream()
+                                                          .map(string2Param)
+                                                          .collect(Collectors.toList());
+            }
+
             reader.moveNext();
 
             return true;
         }
 
+        public static class MethodParam {
+            public final int flags;
+            public final String name;
+
+            public MethodParam(int flags, String name) {
+                this.flags = flags;
+                this.name = name;
+            }
+        }
     }
 
     static class FieldDescription extends FeatureDescription {
         String name;
         String descriptor;
         Object constantValue;
+        String keyName = "field";
 
         @Override
         public int hashCode() {
@@ -3057,13 +3766,13 @@ public class CreateSymbols {
             if (shouldIgnore(baselineVersion, version))
                 return ;
             if (!versions.contains(version)) {
-                output.append("-field");
+                output.append("-" + keyName);
                 output.append(" name " + quote(name, false));
                 output.append(" descriptor " + quote(descriptor, false));
                 output.append("\n");
                 return ;
             }
-            output.append("field");
+            output.append(keyName);
             output.append(" name " + name);
             output.append(" descriptor " + descriptor);
             if (constantValue != null) {
@@ -3075,7 +3784,7 @@ public class CreateSymbols {
 
         @Override
         public boolean read(LineBasedReader reader) throws IOException {
-            if (!"field".equals(reader.lineKey))
+            if (!keyName.equals(reader.lineKey))
                 return false;
 
             name = reader.attributes.get("name");
@@ -3104,6 +3813,19 @@ public class CreateSymbols {
             reader.moveNext();
 
             return true;
+        }
+
+    }
+
+    static final class RecordComponentDescription extends FieldDescription {
+
+        public RecordComponentDescription() {
+            this.keyName = "recordcomponent";
+        }
+
+        @Override
+        protected boolean shouldIgnore(String baselineVersion, String version) {
+            return false;
         }
 
     }
@@ -3563,6 +4285,50 @@ public class CreateSymbols {
     }
     //</editor-fold>
 
+    /**Create sig files for ct.sym reading the classes description from the directory that contains
+     * {@code ctDescriptionFile}, using the file as a recipe to create the sigfiles.
+     */
+    @SuppressWarnings("unchecked")
+    public void createJavadocData(String ctDescriptionFileExtra, String ctDescriptionFile,
+                                  String targetDir, int startVersion) throws IOException {
+        LoadDescriptions data = load(ctDescriptionFileExtra != null ? Paths.get(ctDescriptionFileExtra)
+                                                                    : null,
+                                     Paths.get(ctDescriptionFile));
+
+        Path target = Paths.get(targetDir);
+
+        for (PlatformInput version : data.versions) {
+            int versionNumber = Integer.parseInt(version.version, Character.MAX_RADIX);
+            if (versionNumber < startVersion) {
+                continue;
+            }
+            Path outputFile = target.resolve("element-list-" + versionNumber + ".txt");
+            Files.createDirectories(outputFile.getParent());
+            try (Writer w = Files.newBufferedWriter(outputFile, StandardCharsets.UTF_8)) {
+                Set<ModuleDescription> modules = new TreeSet<>((m1, m2) -> m1.name.compareTo(m2.name));
+                modules.addAll(data.modules.values());
+                for (ModuleDescription module : modules) {
+                    if ("jdk.unsupported".equals(module.name)) {
+                        continue;
+                    }
+                    Optional<ModuleHeaderDescription> header = module.header.stream().filter(h -> h.versions.contains(version.version)).findAny();
+                    if (header.isEmpty()) {
+                        continue;
+                    }
+                    w.write("module:" + module.name);
+                    w.write("\n");
+                    for (ExportsDescription export : header.get().exports) {
+                        if (export.isQualified()) {
+                            continue;
+                        }
+                        w.write(export.packageName.replace('/', '.'));
+                        w.write("\n");
+                    }
+                }
+            }
+        }
+    }
+
     private static void help() {
         System.err.println("Help...");
     }
@@ -3643,16 +4409,78 @@ public class CreateSymbols {
                 new CreateSymbols().createIncrementalBaseLine(args[1], args[2], args);
                 break;
             }
-            case "build-ctsym":
-                if (args.length != 3) {
+            case "build-ctsym": {
+                String ctDescriptionFileExtra;
+                String ctDescriptionFile;
+                String ctSymLocation;
+                String timestampSpec;
+                String currentVersion;
+                String systemModules;
+
+                if (args.length == 6) {
+                    ctDescriptionFileExtra = null;
+                    ctDescriptionFile = args[1];
+                    ctSymLocation = args[2];
+                    timestampSpec = args[3];
+                    currentVersion = args[4];
+                    systemModules = args[5];
+                } else if (args.length == 7) {
+                    ctDescriptionFileExtra = args[1];
+                    ctDescriptionFile = args[2];
+                    ctSymLocation = args[3];
+                    timestampSpec = args[4];
+                    currentVersion = args[5];
+                    systemModules = args[6];
+                } else {
                     help();
                     return ;
                 }
 
-                new CreateSymbols().createSymbols(args[1],
-                                                  args[2],
-                                                  CtSymKind.JOINED_VERSIONS);
+                long timestamp = Long.parseLong(timestampSpec);
+
+                //SOURCE_DATE_EPOCH is in seconds, convert to milliseconds:
+                timestamp *= 1000;
+
+                new CreateSymbols().createSymbols(ctDescriptionFileExtra,
+                                                  ctDescriptionFile,
+                                                  ctSymLocation,
+                                                  timestamp,
+                                                  currentVersion,
+                                                  systemModules);
                 break;
+            }
+            case "build-javadoc-data": {
+                String ctDescriptionFileExtra;
+                String ctDescriptionFile;
+                String targetDir;
+                int startVersion;
+
+                if (args.length == 4) {
+                    ctDescriptionFileExtra = null;
+                    ctDescriptionFile = args[1];
+                    targetDir = args[2];
+                    startVersion = Integer.parseInt(args[3]);
+                } else if (args.length == 5) {
+                    ctDescriptionFileExtra = args[1];
+                    ctDescriptionFile = args[2];
+                    targetDir = args[3];
+                    startVersion = Integer.parseInt(args[4]);
+                } else {
+                    help();
+                    return ;
+                }
+
+                if (startVersion < 9) {
+                    System.err.println("The start version must be at least 9!");
+                    return ;
+                }
+
+                new CreateSymbols().createJavadocData(ctDescriptionFileExtra,
+                                                      ctDescriptionFile,
+                                                      targetDir,
+                                                      startVersion);
+                break;
+            }
         }
     }
 
