@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,10 +31,7 @@ import java.nio.charset.Charset;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 import java.security.Security;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.LinkedList;
-import java.util.List;
+import java.util.*;
 import javax.net.ssl.SSLEngine;
 import javax.net.ssl.SSLProtocolException;
 import javax.net.ssl.SSLSocket;
@@ -66,6 +63,7 @@ final class AlpnExtension {
     static final Charset alpnCharset;
 
     static {
+        @SuppressWarnings("removal")
         String alpnCharsetString = AccessController.doPrivileged(
                 (PrivilegedAction<String>) ()
                         -> Security.getProperty("jdk.tls.alpnCharset"));
@@ -85,23 +83,25 @@ final class AlpnExtension {
         final List<String> applicationProtocols;
 
         private AlpnSpec(String[] applicationProtocols) {
-            this.applicationProtocols = Collections.unmodifiableList(
-                    Arrays.asList(applicationProtocols));
+            this.applicationProtocols = List.of(applicationProtocols);
         }
 
-        private AlpnSpec(ByteBuffer buffer) throws IOException {
+        private AlpnSpec(HandshakeContext hc,
+                ByteBuffer buffer) throws IOException {
             // ProtocolName protocol_name_list<2..2^16-1>, RFC 7301.
             if (buffer.remaining() < 2) {
-                throw new SSLProtocolException(
+                throw hc.conContext.fatal(Alert.DECODE_ERROR,
+                        new SSLProtocolException(
                     "Invalid application_layer_protocol_negotiation: " +
-                    "insufficient data (length=" + buffer.remaining() + ")");
+                    "insufficient data (length=" + buffer.remaining() + ")"));
             }
 
             int listLen = Record.getInt16(buffer);
             if (listLen < 2 || listLen != buffer.remaining()) {
-                throw new SSLProtocolException(
+                throw hc.conContext.fatal(Alert.DECODE_ERROR,
+                        new SSLProtocolException(
                     "Invalid application_layer_protocol_negotiation: " +
-                    "incorrect list length (length=" + listLen + ")");
+                    "incorrect list length (length=" + listLen + ")"));
             }
 
             List<String> protocolNames = new LinkedList<>();
@@ -109,9 +109,10 @@ final class AlpnExtension {
                 // opaque ProtocolName<1..2^8-1>, RFC 7301.
                 byte[] bytes = Record.getBytes8(buffer);
                 if (bytes.length == 0) {
-                    throw new SSLProtocolException(
+                    throw hc.conContext.fatal(Alert.DECODE_ERROR,
+                            new SSLProtocolException(
                         "Invalid application_layer_protocol_negotiation " +
-                        "extension: empty application protocol name");
+                        "extension: empty application protocol name"));
                 }
 
                 String appProtocol = new String(bytes, alpnCharset);
@@ -130,9 +131,9 @@ final class AlpnExtension {
 
     private static final class AlpnStringizer implements SSLStringizer {
         @Override
-        public String toString(ByteBuffer buffer) {
+        public String toString(HandshakeContext hc, ByteBuffer buffer) {
             try {
-                return (new AlpnSpec(buffer)).toString();
+                return (new AlpnSpec(hc, buffer)).toString();
             } catch (IOException ioe) {
                 // For debug logging only, so please swallow exceptions.
                 return ioe.getMessage();
@@ -301,12 +302,7 @@ final class AlpnExtension {
             }
 
             // Parse the extension.
-            AlpnSpec spec;
-            try {
-                spec = new AlpnSpec(buffer);
-            } catch (IOException ioe) {
-                throw shc.conContext.fatal(Alert.UNEXPECTED_MESSAGE, ioe);
-            }
+            AlpnSpec spec = new AlpnSpec(shc, buffer);
 
             // Update the context.
             if (noAPSelector) {     // noAlpnProtocols is false
@@ -448,7 +444,7 @@ final class AlpnExtension {
 
             // Clean or register the extension
             //
-            // No further use of the request and respond extension any more.
+            // No further use of the request and respond extension.
             shc.handshakeExtensions.remove(SSLExtension.CH_ALPN);
 
             return extData;
@@ -475,19 +471,13 @@ final class AlpnExtension {
             AlpnSpec requestedAlps =
                     (AlpnSpec)chc.handshakeExtensions.get(SSLExtension.CH_ALPN);
             if (requestedAlps == null ||
-                    requestedAlps.applicationProtocols == null ||
                     requestedAlps.applicationProtocols.isEmpty()) {
                 throw chc.conContext.fatal(Alert.UNEXPECTED_MESSAGE,
                     "Unexpected " + SSLExtension.CH_ALPN.name + " extension");
             }
 
             // Parse the extension.
-            AlpnSpec spec;
-            try {
-                spec = new AlpnSpec(buffer);
-            } catch (IOException ioe) {
-                throw chc.conContext.fatal(Alert.UNEXPECTED_MESSAGE, ioe);
-            }
+            AlpnSpec spec = new AlpnSpec(chc, buffer);
 
             // Only one application protocol is allowed.
             if (spec.applicationProtocols.size() != 1) {
@@ -512,7 +502,7 @@ final class AlpnExtension {
 
             // Clean or register the extension
             //
-            // No further use of the request and respond extension any more.
+            // No further use of the request and respond extension.
             chc.handshakeExtensions.remove(SSLExtension.CH_ALPN);
         }
     }
