@@ -1,32 +1,43 @@
 /*
- * Copyright 2021 JetBrains s.r.o.
+ * Copyright 2021-2023 JetBrains s.r.o.
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ * This code is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License version 2 only, as
+ * published by the Free Software Foundation.
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ * This code is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ * version 2 for more details (a copy is included in the LICENSE file that
+ * accompanied this code).
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * You should have received a copy of the GNU General Public License version
+ * 2 along with this work; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ *
+ * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
+ * or visit www.oracle.com if you need additional information or have any
+ * questions.
  */
+
+import com.jetbrains.JBR;
+import com.jetbrains.WindowDecorations;
 
 import javax.swing.*;
 import java.awt.*;
 import java.awt.event.InputEvent;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
-import java.lang.reflect.Method;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 
 /**
  * @test
  * @summary Regression test for JBR-3157 Maximized window with custom decorations isn't focused on showing
+ * @requires (os.family == "windows" | os.family == "mac")
  * @key headful
+ * @run main/othervm --add-opens java.desktop/java.awt=ALL-UNNAMED MaximizedCustomDecorationsTest
  */
 
 public class MaximizedCustomDecorationsTest {
@@ -54,7 +65,9 @@ public class MaximizedCustomDecorationsTest {
         button.addActionListener(e -> {
             frame1.dispose();
             frame2 = new JFrame("Frame with custom decorations");
-            enableCustomDecorations(frame2);
+            WindowDecorations.CustomTitleBar titleBar = JBR.getWindowDecorations().createCustomTitleBar();
+            titleBar.setHeight(80);
+            JBR.getWindowDecorations().setCustomTitleBar(frame2, titleBar);
             frame2.addWindowFocusListener(new WindowAdapter() {
                 @Override
                 public void windowGainedFocus(WindowEvent e) {
@@ -67,17 +80,6 @@ public class MaximizedCustomDecorationsTest {
         frame1.add(button);
         frame1.pack();
         frame1.setVisible(true);
-    }
-
-    private static void enableCustomDecorations(Window window) {
-        try {
-            Method setHasCustomDecoration = Window.class.getDeclaredMethod("setHasCustomDecoration");
-            setHasCustomDecoration.setAccessible(true);
-            setHasCustomDecoration.invoke(window);
-        } catch (Exception e) {
-            e.printStackTrace();
-            System.exit(1);
-        }
     }
 
     private static void disposeUI() {
